Corrigiendo apenas sincrono.html

--- a/views/pages/quiz.html
+++ b/views/pages/quiz.html
@@ -12,12 +12,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="quiz.css" />
+    <link rel="stylesheet" href="../../css/pages/quiz.css" />
   </head>
   <body>
     <div class="quiz-container">
       <header class="quiz-header">
-        <a href="index.html" class="back-btn"
+        <a href="../../index.html" class="back-btn"
           ><i class="fas fa-arrow-left"></i> Volver</a
         >
         <div class="progress-indicator">
@@ -44,11 +44,11 @@
           <button onclick="restartQuiz()" class="btn retry">
             Intentar de nuevo
           </button>
-          <a href="index.html" class="btn home">Ir al Inicio</a>
+          <a href="../../index.html" class="btn home">Ir al Inicio</a>
         </div>
       </div>
     </div>
 
-    <script src="quiz.js"></script>
+    <script src="../../js/utils/quiz.js"></script>
   </body>
 </html>
