--- a/views/pages/nosotros.html
+++ b/views/pages/nosotros.html
@@ -12,10 +12,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="nosotros.css" />
+    <link rel="stylesheet" href="../../css/pages/nosotros.css" />
   </head>
   <body>
-    <a href="home.html" class="back-btn">
+    <a href="../../index.html" class="back-btn">
       <i class="fas fa-arrow-left"></i> Volver al Inicio
     </a>
 
@@ -31,7 +31,7 @@
       <div class="team-grid">
         <div class="member-card">
           <div class="avatar-box">
-            <img src="img/jahir-3d.png" alt="Jahir" />
+            <img src="../../assets/images/img/jahir-3d.png" alt="Jahir" />
           </div>
           <div class="member-info">
             <h3>Jahir</h3>
@@ -49,7 +49,7 @@
 
         <div class="member-card">
           <div class="avatar-box">
-            <img src="img/edwin-3d.png" alt="Edwin" />
+            <img src="../../assets/images/img/edwin-3d.png" alt="Edwin" />
           </div>
           <div class="member-info">
             <h3>Edwin</h3>
