--- a/views/synchronous/sincrono.html
+++ b/views/synchronous/sincrono.html
@@ -25,11 +25,11 @@
     <!-- Animate.css para animaciones predefinidas -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="react-styles-modern.css">
+    <link rel="stylesheet" href="../../css/synchronous/react-styles.css">
+    <link rel="stylesheet" href="../../css/synchronous/react-styles-modern.css">
 </head>
 <body>
     <div id="root"></div>
-    <script src="react-animation.js" type="text/babel"></script>
+    <script src="../../js/synchronous/react-animation.js" type="text/babel"></script>
 </body>
 </html>
