--- a/views/pages/nosotros.html
+++ b/views/pages/nosotros.html
@@ -68,7 +68,7 @@
         <div class="member-card">
           <div class="avatar-box">
             <img
-              src="https://api.dicebear.com/7.x/avataaars/svg?seed=Aleks&backgroundColor=ffdfbf"
+              src="../../assets/images/img/aleks-3d.jpeg"
               alt="Aleks"
             />
           </div>
