--- a/views/pages/nosotros.html
+++ b/views/pages/nosotros.html
@@ -59,7 +59,7 @@
               de la lógica para la visualización de datos en tiempo real.
             </p>
             <div class="social-links">
-              <a href="#"><i class="fab fa-github"></i></a>
+              <a href="https://github.com/noeEdwin"><i class="fab fa-github"></i></a>
               <a href="#"><i class="fab fa-linkedin"></i></a>
             </div>
           </div>
